prod_snapshot_2015-09-24_1030/objects/Comments__c.object
<CustomObject>
    <description>Used as a Comment List for System Requests, Issues, etc.</description>
    <fields>
        <fullName>AddlCopyTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Additional user (other than owner) to copy comment on.</inlineHelpText>
        <label>Addl Copy To 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Addl_Copy_To_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Addl Copy To 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Comments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comment_Added__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comment Added</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Record__c</fullName>
        <label>Parent Record</label>
        <referenceTo>RequestsIssues__c</referenceTo>
        <relationshipLabel>Comments</relationshipLabel>
        <relationshipName>Comments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Comment</label>
    <nameField>
        <displayFormat>C-{00000000}</displayFormat>
        <label>Comment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>